--- a/assets/stylesheets/scss/components/_hero.scss
+++ b/assets/stylesheets/scss/components/_hero.scss
@@ -1,10 +1,9 @@
-.hero
-{
+.hero {
+  min-height: 800px;
   height: 100vh;
 }
 
-.hero--primary
-{
+.hero--primary {
   background-image: url("../../../assets/images/backgrounds/bg-clear1.jpg");
   background-repeat: no-repeat;
   background-position: bottom center;
