--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -6,3 +6,6 @@
 @import "base/global";
 
 @import "components/hero";
+@import "components/card";
+@import "components/typed";
+@import "components/cta";
