Added about section

--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -9,3 +9,5 @@
 @import "components/card";
 @import "components/typed";
 @import "components/cta";
+@import "components/section";
+@import "components/button";
