--- a/assets/stylesheets/scss/components/_card.scss
+++ b/assets/stylesheets/scss/components/_card.scss
@@ -4,9 +4,18 @@
   padding: 2rem;
 }
 
+.card-button {
+  text-align: center;
+  height: 0;
+  a {
+    position: relative;
+    bottom: -1rem;
+  }
+}
+
 .card--intro {
   background-color: rgba(#080f6d, 0.5);
-  box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.25);
   .card-image {
     width: 100px;
     height: auto;
@@ -17,6 +26,32 @@
     font-size: 2.25rem;
     .card-title {
       font-size: 6rem;
+    }
+  }
+}
+
+.card--about {
+  box-shadow: 0 0 30px 2px rgba(0, 0, 0, 0.1);
+  padding-bottom: 2rem;
+  .card-image {
+    width: 200px;
+    height: auto;
+    margin-left: 1rem;
+    border: 1px solid $gray-300;
+  }
+  .card-body {
+    font-size: 1rem;
+    text-align: justify;
+    .card-title {
+      font-size: 2.5rem;
+    }
+  }
+  .card-more {
+    margin: 2rem 1.25rem 0 1.25rem;
+    border-top: 1px solid $gray-300;
+    .card-body {
+      margin: 2rem 0 0.5rem 0;
+      padding: 0;
     }
   }
 }
@@ -46,6 +81,19 @@
       }
       .card-subtitle, .card-text {
         font-size: 1.25rem;
+      }
+    }
+  }
+  .card--about {
+    padding: 0.5rem;
+    padding-bottom: 2rem;
+    .card-image {
+      display: block;
+      margin: 1rem auto;
+    }
+    .card-body {
+      .card-title {
+        font-size: 1.8rem;
       }
     }
   }
