Renamed authorities to mentors

--- a/assets/stylesheets/scss/components/_card.scss
+++ b/assets/stylesheets/scss/components/_card.scss
@@ -69,7 +69,7 @@
   }
 }
 
-.card--authorities {
+.card--mentor {
   margin-bottom: 4rem;
 }
 
@@ -120,7 +120,7 @@
   .card--about {
     margin-bottom: 1rem;
   }
-  .card--authorities {
+  .card--mentor {
     margin-bottom: 2.5rem;
   }
 }
