--- a/assets/stylesheets/scss/components/_card.scss
+++ b/assets/stylesheets/scss/components/_card.scss
@@ -1,4 +1,5 @@
 .card {
+  box-shadow: 0 0 30px 3px rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 0.8rem;
   padding: 2rem;
@@ -8,7 +9,6 @@
 }
 
 .card-with-photo {
-  box-shadow: 0 0 30px 2px rgba(0, 0, 0, 0.1);
   padding: 2.5rem;
   .row {
     margin: 0 -1.25rem;
@@ -27,6 +27,23 @@
     .card-title {
       font-size: 2.5rem;
     }
+  }
+}
+
+.card-with-icon {
+  background-color: $primary;
+  background: $gradient-primary;
+  color: $white;
+  text-align: center;
+  .card-icon {
+    font-size: 5rem;
+    line-height: 0;
+    margin-top: 0.5rem;
+  }
+  .card-text {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 1.5rem;
   }
 }
 
@@ -73,6 +90,12 @@
   margin-bottom: 4rem;
 }
 
+.card--hobby {
+  .card {
+    word-wrap: normal;
+  }
+}
+
 @include media-breakpoint-down(md) {
   .card--intro {
     .card-body {
@@ -83,6 +106,9 @@
         font-size: 2rem;
       }
     }
+  }
+  .card--hobby {
+    margin: 1rem 0;
   }
 }
 
@@ -122,5 +148,13 @@
   }
   .card--mentor {
     margin-bottom: 2.5rem;
+  }
+  .card--hobby {
+    &:first-child {
+      margin-top: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
