--- a/assets/stylesheets/scss/variables.scss
+++ b/assets/stylesheets/scss/variables.scss
@@ -1,3 +1,5 @@
 $primary: #155db6;
 $secondary: #1a1c9c;
 $highlight: #bc4b56;
+
+$gradient-primary: linear-gradient(to right, $primary 0%, $secondary 100%);
