Adjusted primary & secondary color

--- a/assets/stylesheets/scss/variables.scss
+++ b/assets/stylesheets/scss/variables.scss
@@ -1,5 +1,5 @@
-$primary: #155db6;
-$secondary: #1a1c9c;
+$primary: #1c68c4;
+$secondary: #0c0e7c;
 $highlight: #bc4b56;
 
-$gradient-primary: linear-gradient(to right, $primary 0%, $secondary 100%);
+$gradient-primary: linear-gradient(135deg, $primary 0%, $secondary 100%);
