--- a/assets/stylesheets/scss/components/_hero.scss
+++ b/assets/stylesheets/scss/components/_hero.scss
@@ -4,6 +4,7 @@
 }
 
 .hero--primary {
+  background: $primary;
   background-image: url("../../../assets/images/backgrounds/bg-clear1.jpg");
   background-repeat: no-repeat;
   background-position: bottom center;
