--- a/assets/stylesheets/scss/layout/_footer.scss
+++ b/assets/stylesheets/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
   border-top: 1px solid $gray-300;
   text-align: center;
   .copyright {
-    margin: 1.5rem 0;
+    margin: 1.5rem 0 2rem 0;
     i {
       position: relative;
       top: 2px;
