--- a/assets/stylesheets/scss/components/_card.scss
+++ b/assets/stylesheets/scss/components/_card.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.card-with-photo {
+.card-with-horizontal-image {
   padding: 2.5rem;
   .row {
     margin: 0 -1.25rem;
@@ -26,6 +26,20 @@
     text-align: justify;
     .card-title {
       font-size: 2.5rem;
+    }
+  }
+}
+
+.card-with-vertical-image {
+  padding: 0rem;
+  font-size: 1.25rem;
+  text-align: center;
+  .card-img-top {
+    margin: auto;
+  }
+  .card-body {
+    .card-title {
+      margin: 0.75rem;
     }
   }
 }
@@ -54,6 +68,16 @@
     position: relative;
     bottom: -1rem;
   }
+}
+
+.card-section {
+  padding: 0 0.5rem;
+}
+
+.card-section-title {
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
 }
 
 .card--intro {
@@ -95,6 +119,21 @@
   }
 }
 
+.card--favourite {
+  padding: 0 0.5rem;
+  .card-img-top {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border-radius: 0.8rem 0.8rem 0 0;
+    border-bottom: none;
+  }
+  .card-body {
+    background-color: $white;
+    border-radius: 0 0 0.8rem 0.8rem;
+  }
+}
+
 @include media-breakpoint-down(md) {
   .card--intro {
     .card-body {
@@ -109,12 +148,20 @@
   .card--hobby {
     margin: 1rem 0;
   }
+  .card--favourite {
+    margin: 0.5rem 0;
+  }
 }
 
 @include media-breakpoint-down(sm) {
-  .card {
+  .card, .card-section {
     width: 90%;
     margin: auto;
+  }
+  .card-section-title {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 0.5rem;
   }
   .card--intro {
     .card-image {
@@ -130,7 +177,7 @@
       }
     }
   }
-  .card-with-photo {
+  .card-with-horizontal-image {
     padding: 2rem;
     .card-image {
       display: block;
@@ -155,5 +202,9 @@
     &:last-child {
       margin-bottom: 0;
     }
+  }
+  .card--favourite {
+    width: 50%;
+    padding: 0;
   }
 }
