--- a/assets/stylesheets/scss/components/_card.scss
+++ b/assets/stylesheets/scss/components/_card.scss
@@ -34,9 +34,6 @@
   padding: 0rem;
   font-size: 1.25rem;
   text-align: center;
-  .card-img-top {
-    margin: auto;
-  }
   .card-body {
     .card-title {
       margin: 0.75rem;
@@ -50,9 +47,8 @@
   color: $white;
   text-align: center;
   .card-icon {
-    font-size: 5rem;
+    font-size: 4.5rem;
     line-height: 0;
-    margin-top: 0.5rem;
   }
   .card-text {
     font-size: 1.5rem;
@@ -71,13 +67,20 @@
 }
 
 .card-section {
-  padding: 0 0.5rem;
-}
-
-.card-section-title {
-  font-size: 2rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
+  box-shadow: 0 0 30px 3px rgba(0, 0, 0, 0.15);
+  background-color: $white;
+  border-radius: 0.8rem;
+  padding: 2rem;
+  margin-bottom: 4rem;
+  .card-section-title {
+    font-size: 2rem;
+    font-weight: 400;
+    margin-left: -0.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .card {
+    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .card--intro {
@@ -115,18 +118,40 @@
 
 .card--hobby {
   .card {
+    max-width: 300px;
+    position: relative;
+    border-radius: 50%;
     word-wrap: normal;
+    margin: auto;
+    &::after
+    {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
+    .card-body {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 0;
+      padding: 30px;
+    }
   }
 }
 
 .card--favourite {
   padding: 0 0.5rem;
   .card-img-top {
+    position: relative;
     width: 100%;
     max-width: 300px;
     height: auto;
-    border-radius: 0.8rem 0.8rem 0 0;
     border-bottom: none;
+    border-radius: 0.8rem 0.8rem 0 0;
+    img {
+      border-radius: inherit;
+    }
   }
   .card-body {
     background-color: $white;
