--- a/assets/stylesheets/scss/components/_card.scss
+++ b/assets/stylesheets/scss/components/_card.scss
@@ -1,5 +1,5 @@
 .card {
-  box-shadow: 0 0 30px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: $box-shadow;
   border: none;
   border-radius: 0.8rem;
   padding: 2rem;
@@ -67,7 +67,7 @@
 }
 
 .card-section {
-  box-shadow: 0 0 30px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: $box-shadow;
   background-color: $white;
   border-radius: 0.8rem;
   padding: 2rem;
@@ -79,102 +79,7 @@
     margin-bottom: 1.5rem;
   }
   .card {
-    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
-  }
-}
-
-.card--intro {
-  background-color: rgba(#080f6d, 0.5);
-  box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.25);
-  .card-image {
-    width: 100px;
-    height: auto;
-  }
-  .card-body {
-    color: $gray-300;
-    padding: 1rem;
-    font-size: 2.25rem;
-    .card-title {
-      font-size: 6rem;
-    }
-  }
-}
-
-.card--about {
-  margin-bottom: 2rem;
-  .card-more {
-    margin-top: 2rem;
-    border-top: 1px solid $gray-300;
-    .card-body {
-      margin: 2rem 0 0.5rem 0;
-      padding: 0;
-    }
-  }
-}
-
-.card--mentor {
-  margin-bottom: 4rem;
-}
-
-.card--hobby {
-  .card {
-    max-width: 300px;
-    position: relative;
-    border-radius: 50%;
-    word-wrap: normal;
-    margin: auto;
-    &::after
-    {
-      content: "";
-      display: block;
-      padding-bottom: 100%;
-    }
-    .card-body {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      top: 0;
-      padding: 30px;
-    }
-  }
-}
-
-.card--favourite {
-  padding: 0 0.5rem;
-  .card-img-top {
-    position: relative;
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    border-bottom: none;
-    border-radius: 0.8rem 0.8rem 0 0;
-    img {
-      border-radius: inherit;
-    }
-  }
-  .card-body {
-    background-color: $white;
-    border-radius: 0 0 0.8rem 0.8rem;
-  }
-}
-
-@include media-breakpoint-down(md) {
-  .card--intro {
-    .card-body {
-      .card-title {
-        font-size: 4rem;
-      }
-      .card-subtitle, .card-text {
-        font-size: 2rem;
-      }
-    }
-  }
-  .card--hobby {
-    margin: 1rem 0;
-  }
-  .card--favourite {
-    margin: 0.5rem 0;
+    box-shadow: $box-shadow-sm;
   }
 }
 
@@ -188,20 +93,6 @@
     text-align: center;
     margin-bottom: 0.5rem;
   }
-  .card--intro {
-    .card-image {
-      width: 50px;
-      height: auto;
-    }
-    .card-body {
-      .card-title {
-        font-size: 1.75rem;
-      }
-      .card-subtitle, .card-text {
-        font-size: 1.25rem;
-      }
-    }
-  }
   .card-with-horizontal-image {
     padding: 2rem;
     .card-image {
@@ -213,23 +104,5 @@
         font-size: 1.8rem;
       }
     }
-  }
-  .card--about {
-    margin-bottom: 1rem;
-  }
-  .card--mentor {
-    margin-bottom: 2.5rem;
-  }
-  .card--hobby {
-    &:first-child {
-      margin-top: 0;
-    }
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-  .card--favourite {
-    width: 50%;
-    padding: 0;
   }
 }
