Added favourite youtube channels to favourites section

--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -5,6 +5,8 @@
 @import "layout/footer";
 @import "base/global";
 
+@import "utilities/hyphens";
+
 @import "components/hero";
 @import "components/card";
 @import "components/typed";
