--- a/assets/stylesheets/scss/components/_card.scss
+++ b/assets/stylesheets/scss/components/_card.scss
@@ -72,6 +72,9 @@
   border-radius: 0.8rem;
   padding: 2rem;
   margin-bottom: 4rem;
+  &:last-child {
+    margin-bottom: 0;
+  }
   .card-section-title {
     font-size: 2rem;
     font-weight: 400;
