--- a/assets/stylesheets/scss/pages/_index.scss
+++ b/assets/stylesheets/scss/pages/_index.scss
@@ -59,21 +59,12 @@
 .card--favourite {
   padding: 0 0.5rem;
   .card-img-top {
-    position: relative;
-    width: 100%;
     max-width: 300px;
-    height: auto;
-    border-bottom: none;
-    border-radius: 0.8rem 0.8rem 0 0;
-    img {
-      border-radius: inherit;
-    }
   }
-  .card-body {
-    background-color: $white;
-    border-top: 1px solid $gray-300;
-    border-radius: 0 0 0.8rem 0.8rem;
-  }
+}
+
+.card--trips {
+  padding: 0 0.5rem;
 }
 
 @include media-breakpoint-down(md) {
@@ -127,5 +118,12 @@
   .card--favourite {
     width: 50%;
     padding: 0;
+  }
+  .card--trips {
+    padding: 0;
+    margin-bottom: 1rem;
+    &:last-child {
+      margin: 0;
+    }
   }
 }
