--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -7,6 +7,7 @@
 
 @import "utilities/hyphens";
 
+@import "components/images";
 @import "components/hero";
 @import "components/card";
 @import "components/typed";
