--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -6,6 +6,8 @@
 @import "base/global";
 
 @import "utilities/hyphens";
+@import "utilities/colors";
+@import "utilities/shadows";
 
 @import "components/images";
 @import "components/hero";
