--- a/assets/stylesheets/scss/components/_social_media.scss
+++ b/assets/stylesheets/scss/components/_social_media.scss
@@ -9,3 +9,14 @@
     }
   }
 }
+
+@include media-breakpoint-down(sm) {
+  .social-media {
+    a {
+      padding: 0 1.5rem;
+      i {
+        width: 48px;
+      }
+    }
+  }
+}
