--- a/assets/stylesheets/scss/layout/_navbar.scss
+++ b/assets/stylesheets/scss/layout/_navbar.scss
@@ -1,16 +1,22 @@
+.jk-logo {
+  fill: $white;
+}
+
 .navbar {
   min-width: 325px;
   margin-bottom: 0px;
   padding: 1.25rem 1rem;
   transition: all 0.3s ease-in-out;
   .navbar-brand {
-    img {
+    position: relative;
+    display: flex;
+    .brand-logo {
       width: 50px;
       height: 50px;
     }
-    span {
+    .brand-name {
       padding: 0 0.5rem;
-      vertical-align: middle;
+      margin: auto;
     }
   }
   &.navbar-shrink {
